# pdf-extractxt

./: LICENSE  README.md  env.example  pyproject.toml
.github/: pull_request_template.md
.gitub/ISSUE_TEMPLATE/: feature_request.md  setup_initial.md
src/: main.py
src/api/: README.md
src/api/endpoints/: __init__.py  pdf.py
src/api/errors/: __init__.py  exceptions.py
src/api/schemas/: __init__.py  pdf.py
src/core/: README.md  __init__.py
src/core/entities/: __init__.py  pdf_document.py
src/core/use_cases/: __init__.py  extract_text.py  protocols.py
src/infrastructure/: README.md  __init__.py
src/infrastructure/database/: __init__.py  mongodb.py
src/infrastructure/pdf_client/: __init__.py  client.py
src/infrastructure/repositories/: __init__.py
tests/api/: __init__.py
tests/core/: __init__.py
tests/infrastructure/: __init__.py
